apps/goatlint/src/snapshots/_fixtures__cli__linter@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/linter
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/js_as_jsx.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | <div /> // Should `.js` file pass as `.jsx`.
   `----
  help: Remove the debugger statement

  ! eslint(no-unused-expressions): Expected expression to be used
   ,-[fixtures/cli/linter/nan.js:1:1]
 1 | 123 == NaN;
   : ^^^^^^^^^^^
   `----
  help: Consider using this expression or removing it

  ! eslint(use-isnan): Checking equality with NaN will always return false
   ,-[fixtures/cli/linter/nan.js:1:8]
 1 | 123 == NaN;
   :        ^^^
   `----
  help: Use the `isNaN` function to compare with NaN.

Found 4 warnings and 0 errors.
Finished in <variable>ms on 3 files with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
